﻿更新履歴

==== Ver 0.9.2.2(2010/06/**)
 * DM送信で複数行を考慮していなかったのを修正(開発版のみ。安定版では問題ありません)
 * 画像プレビューで未対応画像形式のチェックをするようにした
 * ハッシュタグマネージャで大文字小文字を区別せずに扱うようにした
 * パスワードを設定するミスが多いため、設定画面をOKで閉じる際にbit.lyのアカウント情報が正しいかどうか検証するようにした
 * Ctrl+フルキー数字でタブのダイレクト選択ができるようにした。Ctrl+1～8で左端からのタブを選択、Ctrl+9で最後尾タブ選択。
==== Ver 0.9.2.2(2010/06/05)
 * 発言数・Followers/Following数をタイトルに表示するオプションの選択肢を追加
 * アイコンイメージのキー重複で取得ポストが追加されないバグ修正(0.9.2.1で発生 安定版では発生しません)
 * タブ種別が正しく取得できないことがあるバグ修正。これによりListsタブなどが作成できないことがある不具合が修正されます。
 * DMが送信できないバグ修正(0.9.2.1で発生 安定版では発生しません)
 * 詳細表示のアイコンダブルクリックでホームを開けなくなっていたのを修正(0.9.2.1で発生 安定版では発生しません)
 * IDN形式の短縮URLを発言詳細部でクリックした時、開けなかった問題を修正
 * プロフィール画面から編集を可能にした
 * プロフィール画面からアイコンを変更可能にした。Twitterの仕様により次回発言しないと変更が成功しているか確認できません。
 * タブメニューのショートカットが効かない場合がある不具合修正
 * URL直後の>(&gt;)がURLに含まれてリンク化されるバグ修正
 * 検索時のsince_idが、検索条件が変わってもクリアされていないバグ修正(0.9.2.1で発生 安定版では発生しません)
 * 開発版(バージョンの末尾が0以外）、デバッグビルド実行中の場合はトレース出力が初期状態で有効になるようにした
==== Ver 0.9.2.1(2010/06/01)
 * Retweetカウントの取得の際に時間がかかるため、プログレスバーを表示するようにした
 * タスクトレイへのアイコン追加タイミングを変更した
 * ユーザー情報ダイアログで、「認証済み(Verified)」の文字をクリックした際に、本家の認証済みアカウントについての説明ページを開くようにした
 * 詳細表示のユーザー名でのツールチップ表示を取りやめた。ホームを開く、右クリックでメニューを開く機能はそのままです。
 * 詳細表示のユーザー名左クリックでホームを開く動作をダブルクリックに変更した
 * htn.to,amzn.toのURL展開に対応
 * Followersリストの取得リトライがうまく機能していなかったので修正
 * piapro,flickr,pixivにある画像への直リンクの場合にプレビューが動作しなかったバグを修正
 * 画像プレビューでニコニコ動画公式チャンネルの動画サムネイルに対応した。他にも対応URLパターンを増やした。
 * ニコニコ動画の画像プレビューの際に、サムネイル取得不可の場合エラーコードを表示するようにした
 * ニコニコ動画のプレビューで、ツールチップを使い動画情報を表示するようにした
 * ハッシュタグの自動付加が有効な場合、メニューにチェックマークを入れるようにした
 * PublicSearchの検索を同一内容で頻繁に実行すると検索結果が返ってこなくなることがあるため、検索のみ最低30秒更新とした
 * PublicSearchの際のクエリにsince_idを付加するようにした
 * プロフィール情報取得、フォロー、アンフォロー、フォロー状況取得を非同期化してプログレスバーを表示するようにした
 * 詳細表示のユーザー名とアイコンの各部にマウスカーソルを置いたときにカーソルを変えるようにした
 * ユーザー情報ダイアログに「発言を検索」ボタンを追加。ユーザーの発言を検索タブで表示します。
 * 詳細表示のユーザー名右クリックに「このユーザーの発言を検索」を追加。ユーザーの発言を検索タブで表示します。
 * 詳細表示の右クリックメニューに「このユーザーの発言を検索」を追加。ユーザーの発言を検索タブで表示します。
 * API Proxy環境下でxAuth認証が通らない不具合を修正（通常のxAuth認証には影響ありません）
 * 返信先を開く際、検索タブ、リストタブを考慮していなかったバグ修正