@@ -6,6 +6,7 @@
  * ハッシュタグマネージャで大文字小文字を区別せずに扱うようにした
  * パスワードを設定するミスが多いため、設定画面をOKで閉じる際にbit.lyのアカウント情報が正しいかどうか検証するようにした
  * Ctrl+フルキー数字でタブのダイレクト選択ができるようにした。Ctrl+1～8で左端からのタブを選択、Ctrl+9で最後尾タブ選択。
+ * in_reply_to_status_idの付いた書き込みで、reply先の書き込みをキーで追いかけられるようにした ]でreply先へジャンプ、[で元の書き込みへ戻る。
 ==== Ver 0.9.2.2(2010/06/05)
  * 発言数・Followers/Following数をタイトルに表示するオプションの選択肢を追加
  * アイコンイメージのキー重複で取得ポストが追加されないバグ修正(0.9.2.1で発生 安定版では発生しません)
